iptables
# Generated by iptables-save v1.4.7 on Tue Feb 12 14:37:07 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [360:51424]
-A INPUT -p tcp -m tcp --dport 9000 -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 13579 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9000 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8088 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7077 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8081 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9000 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 50070 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3888 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2181 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Feb 12 14:37:07 2019
